fixed image too much on the side

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .col-3 {
-  padding-right: 10%;
+  padding-right: 8%;
 }
 
 .navbar{
@@ -35,4 +35,8 @@
 .port {
   background-color: darkgrey;
   padding: 5%;
+}
+
+#home {
+  padding-top: 8%;
 }
